2008-02-23  KURODA Hiraku  <hiraku@sapporo.email.ne.jp>
	* hiki/filter.rb, test/spec_filter.rb: Ignore error raised inregisterd filter.
	* hiki/filter/bayes_filter.rb, plugin/50bayes_filter.rb,
	plugin/en/50bayes_filter.rb, plugin/ja/50bayes_filter.rb,
	test/spec_bayes_filter.rb: Send report mail ONLY WHEN configuration is set so.

2008-02-20  KURODA Hiraku  <hiraku@sapporo.email.ne.jp>
	* plugin/50bayes_filter.rb: Fix a bug for ruby-1.8.5.

2008-02-12  KURODA Hiraku  <hiraku@sapporo.email.ne.jp>
	* hiki/command.rb, hiki/plugin.rb, messages/en.rb, messages/ja.rb:
	hiki/filter.rb, hiki/filter/bayes_filter.rb,
	hiki/filter/bayes_filter/bayes.rb, hiki/filter/word_filter.rb,
	plugin/50bayes_filter.rb, plugin/50word_filter.rb,
	plugin/en/50bayes_filter.rb, plugin/en/50word_filter.rb,
	plugin/ja/50bayes_filter.rb, plugin/ja/50word_filter.rb,
	test/spec_50bayes_filter.rb, test/spec_bayes_filter.rb:
	add spam filtering features.

2008-02-08  Kouhei Yanagita <yanagi@shakenbu.org>
	* template/adminform.html: div.main should precede div.sidebar.

2008-01-25  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* hiki.cgi, misc/plugin/attach/attach.cgi: $defout -> $stdout.

2008-01-07  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* plugin/01sp.rb: improve previous incompatible change.

2008-01-06  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* hiki/config.rb, hiki/hiki_formatter.rb,
	misc/webrick/hikilet.rb, plugin/01sp.rb, hiki/pluginutil.rb,
	style/default/html_formatter.rb: partially support ruby 1.9.0.

2007-10-29  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* hiki/command.rb: revert partial patched
	toc_lv. (see [Hiki-dev:01106], [Hiki-dev:01164])

2007-09-26  U.Nakamura  <usa@garbagecollect.jp>
	* hiki/command.rb: raise SessionError instead of PermissionError
	in case of session errors.

2007-09-25  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/db/flatfile.rb, hiki.cgi, hiki/xmlrpc.rb,
	misc/webrick/hikilet.rb: use HikiDB_dbtype as the name of the
	class instead of HikiDB.
