@@ -1,3 +1,7 @@
+2008-03-26  Kazuhiko  <kazuhiko@fdiary.net>
+	* hiki/repos/git.rb, test/test_repos_git.rb: support git
+	repository (contributed by Kouhei Sutou).
+
 2008-02-23  KURODA Hiraku  <hiraku@sapporo.email.ne.jp>
 	* hiki/filter.rb, test/spec_filter.rb: Ignore error raised inregisterd filter.
 	* hiki/filter/bayes_filter.rb, plugin/50bayes_filter.rb,
